[workspace]
members = [
  # tests and example code
  "examples",
  # the main library and tests
  "rustls",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[patch.crates-io]
ring = { path = "/Volumes/Work/Projects/Wasmer/ring" }
mio = { git = "https://github.com/wasix-org/mio.git", branch = "wasix" }
